components/Dialog.module.css
.dialog-container {
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.5);
    position: fixed;
    top: 0;
    left: 0;
    z-index: 9998;
    backdrop-filter: blur(0.2rem);
}

@keyframes animateDialog {
    0% {
      transform: scale(90%);
    }
    100% {
      transform: scale(100%);
    }
  }

.dialog {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    width: 80%;
    max-width: 30rem;
    min-height: 24rem;
    background-color: #2a2a2a;
    z-index: 9999;
    border: none;
    padding: 2rem 3rem;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    border-radius: 1rem;
    gap: 2rem;
    animation: 0.2s ease-in-out 0s 1 animateDialog;
    outline: 1px solid rgb(85, 85, 85);

    @media (max-width: 980px) {
        width: 90%;
        padding: 2rem 2rem;
    }
}

.dialog-title {
    color: white;
    font-size: 1.1rem;
}

.dialog-buttons-container {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    gap: 1rem;

    @media (max-width: 550px) {
        justify-content: center;
        flex-wrap: wrap;
    }
}

.dialog-buttons-container button {
    color: white;
    min-width: 5rem;
    padding: 0 0.8rem;
    height: 2.2rem;
    border-radius: 0.4rem;
    background-color: rgb(58, 58, 58);
    border: none;
    cursor: pointer;
    outline: 1px solid rgb(85, 85, 85);

    @media (max-width: 550px) {
        width: unset;
        flex: 1;
    }
}

.dialog-buttons-container button:hover {
    background-color: rgb(72, 72, 72);
}

.dialog-buttons-container svg {
    vertical-align: middle;
    margin-right: 0.3rem;
}

